apps/app-proxy/overlays/captest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: captest-cap-app-proxy
  namespace: captest
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        # path: /app-proxy/
        path: /app-proxy(/|$)(.*)
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
